[package]
name = "redis-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
redis = "*"
bytes = "*"
byteorder ="*"
native-tls = "0.2"
log = "0.4.14"